--- a/templates/roles/gpu/tasks/main.yml
+++ b/templates/roles/gpu/tasks/main.yml
@@ -1,8 +1,10 @@
----
+---    
 - name: Install Docker CE 18.09
   apt: 
     update_cache: yes
-    name: docker-ce=5:18.09.1~3-0~ubuntu-bionic
+    pkg:
+      - docker-ce=5:18.09.1~3-0~ubuntu-bionic
+      - docker-ce-cli=5:18.09.1~3-0~ubuntu-bionic
 
 - name: Add key for NVIDIA CUDA repos
   apt_key:
@@ -38,6 +40,22 @@
 - name: Create jenkins user
   user:
     name: jenkins
-    groups: docker
+    groups:
+      - docker
+      - wheel
     uid: 1001
     append: yes
+
+- name: Add authorized keys
+  authorized_key:
+    user: jenkins
+    key: '{{ item }}'
+  with_file:
+    - ../../common/files/goai-gpuci.id_rsa.pub
+    - ../../common/files/jenkins-master.id_rsa.pub
+    - ../../common/files/jenkins-aws-master.id_rsa.pub
+
+- name: Initialize git-lfs
+  command: git lfs install
+  become: yes
+  become_user: jenkins
