--- a/templates/roles/common/tasks/main.yml
+++ b/templates/roles/common/tasks/main.yml
@@ -20,7 +20,6 @@
       - curl
       - software-properties-common
       - unzip
-      - python3-pip
       - sudo
 
 - name: Initialize git-lfs
@@ -28,13 +27,20 @@
   vars:
     ansible_become: no
 
+- name: Upgrade pip
+  pip:
+    executable: pip3
+    extra_args: --upgrade
+    name:
+      - pip
+
 - name: Install pip packages
   pip:
     executable: pip3
     name:
-      - requests>=2.23.0
-      - PyYaml>=5.3.1
-      - jinja2>=2.11.2
+      - requests
+      - PyYaml
+      - jinja2
 
 - name: Make sure we have a 'wheel' group
   group:
