Install latest `jq` binary
The `jq` version available from Ubuntu's repositories is `1.5`, but there is a feature in `1.6` that I'd like to start leveraging (the `$ENV` builtin to access environmental variables, [link](https://github.com/stedolan/jq/releases/tag/jq-1.6)).

This PR updates the way we install `jq` to grab the latest `1.6` binary from GitHub instead of installing via `apt`.

--- a/templates/roles/common/tasks/main.yml
+++ b/templates/roles/common/tasks/main.yml
@@ -3,7 +3,6 @@
   apt:
     update_cache: yes
     pkg:
-      - jq
       - ansible
       - openjdk-8-jdk-headless
       - git
@@ -132,3 +131,10 @@
     mode: '0555'
     content: |
       #!/bin/bash
+
+- name: Install jq
+  get_url:
+    url: https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64
+    dest: /usr/local/bin/jq
+    mode: '0755'
+
