--- a/templates/roles/gpu/tasks/main.yml
+++ b/templates/roles/gpu/tasks/main.yml
@@ -12,9 +12,9 @@
   - include_vars: versions.yml
   apt:
     name:
-      - "cuda-libraries-11-5={{ cuda_libraries }}"
-      - "cuda-drivers-495={{ cuda_drivers }}"
-      - "cuda-compiler-11-5={{ cuda_compiler }}"
+      - "cuda-libraries-{{ cuda_libraries_version }}"
+      - "cuda-drivers-{{ cuda_drivers_version }}"
+      - "cuda-compiler-{{ cuda_compiler_version }}"
     state: present
     install_recommends: no
     update_cache: yes
