--- a/templates/roles/gpu/tasks/main.yml
+++ b/templates/roles/gpu/tasks/main.yml
@@ -26,14 +26,15 @@
     update_cache: yes
 
 - name: Hold CUDA Packages
+  - include_vars: versions.yml
   dpkg_selections:
     name: "{{ item }}"
     selection: hold
   loop:
-    - cuda-libraries-11-5
-    - cuda-drivers-495
-    - cuda-compiler-11-5
-  
+    - "cuda-libraries-{{ cuda_libraries_version }}"
+    - "cuda-drivers-{{ cuda_drivers_version }}"
+    - "cuda-compiler-{{ cuda_compiler_version }}"
+
 - name: Install nvidia docker apt key
   apt_key:
     url: https://nvidia.github.io/nvidia-docker/gpgkey
