--- a/templates/roles/gpu/tasks/main.yml
+++ b/templates/roles/gpu/tasks/main.yml
@@ -8,7 +8,7 @@
   apt_repository:
     repo: "deb http://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64 /"
 
-- name: Install CUDA 11.5
+- name: Install CUDA
   - include_vars: versions.yml
   apt:
     name:
