chore: correct include vars syntax error

--- a/templates/roles/gpu/tasks/main.yml
+++ b/templates/roles/gpu/tasks/main.yml
@@ -9,7 +9,7 @@
     repo: "deb http://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64 /"
 
 - name: Install CUDA
-  - include_vars: versions.yml
+  include_vars: versions.yml
   apt:
     name:
       - "cuda-libraries-{{ cuda_libraries_version }}"
@@ -26,7 +26,7 @@
     update_cache: yes
 
 - name: Hold CUDA Packages
-  - include_vars: versions.yml
+  include_vars: versions.yml
   dpkg_selections:
     name: "{{ item }}"
     selection: hold
